# openmc-plasma-source

./: .gitignore  CITATION.cff  LICENSE  README.md  main.py  openmc_example.py  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: anaconda-publish.yml  ci.yml  python-publish.yml
conda/: conda_build_config.yaml  meta.yaml
examples/: cross_sections.xml  energy.py  neutron_energy_from_nesst.py  plot_energy_spectra.py  plot_mesh_source.py  plot_tokamak_ion_temperature.py  plot_tokamak_neutron_source_density.py  plot_tokamak_neutron_source_strengths.py  point_source_example.py  ring_source_angles_plot.py  ring_source_example.py  tokamak_source_example.py  tokamak_source_plot.py
openmc-plasma-source/: main.py
openmc_plasma_source/: __init__.py  fuel_types.py  main.py  point_source.py  properties.py  ring_source.py  tokamak_source.py  utils.py
openmc_plasma_source/plotting/: __init__.py  plot_tokamak_source.py
src/openmc_plasma_source/: __init__.py  fuel_types.py  point_source.py  ring_source.py  tokamak_source.py
src/openmc_plasma_source/plotting/: __init__.py  plot_tokamak_source.py
tests/: test_fuel_types.py  test_input_checks.py  test_plotting.py  test_point_source.py  test_property.py  test_ring_source.py  test_tokamak_source.py
