[metadata]
name = openmc_plasma_source
version = attr: openmc_plasma_source.__version__
author = The openmc-plasma-source Development Team
author_email = rdelaportemathurin@gmail.com
description = Creates tokamak plasma sources for OpenMC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/openmc-plasma-source
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/openmc-plasma-source
    Tracker = https://github.com/fusion-energy/openmc-plasma-source/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    numpy >= 1.9
    matplotlib >= 3.4.3
    importlib-metadata; python_version < "3.8"

[options.extras_require]
tests = 
    pytest >= 5.4.3
